--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,5 @@
 name: Telegram sender markdownV2 specific
-description: Enter the GitHub markdown message and it will automatically convert it to the markdownv2 format compatible with Telegram for you
+description: This GitHub Action takes any GitHub markdown message and automatically converts it into the MarkdownV2 format supported by Telegram. It allows you to seamlessly send GitHub content—such as issues, pull request updates, or commit messages—directly to your Telegram chats or channels, preserving formatting like bold, italics, links, and code blocks. By integrating this Action into your workflow, you can keep your team updated on repository changes in real-time via Telegram notifications, without manually reformatting messages.
 color: blue
 icon: message-circle
 inputs:
@@ -12,10 +12,6 @@ inputs:
   message:
     description: 'Message to send'
     required: true
-  parse-mode:
-    description: 'Message parse mode: MarkdownV2, HTML, etc.'
-    required: false
-    default: 'MarkdownV2'
 outputs:
   response:
     description: 'Telegram API response'
@@ -26,4 +22,3 @@ runs:
     - ${{ inputs.bot-token }}
     - ${{ inputs.chat-id }}
     - ${{ inputs.message }}
-    - ${{ inputs.parse-mode }}
