--- a/action.yml
+++ b/action.yml
@@ -1,6 +1,8 @@
 name: Telegram sender markdownV2 specific
-description: This GitHub Action takes any GitHub markdown message and automatically converts it into the MarkdownV2 format supported by Telegram. It allows you to seamlessly send GitHub content—such as issues, pull request updates, or commit messages—directly to your Telegram chats or channels, preserving formatting like bold, italics, links, and code blocks. By integrating this Action into your workflow, you can keep your team updated on repository changes in real-time via Telegram notifications, without manually reformatting messages.
-color: blue
+description: |
+  This GitHub Action is a simple Telegram message sender.
+  You can write your message in GitHub Markdown format, and the Action will automatically convert it into Telegram-friendly MarkdownV2 before sending.
+  With this Action, you can easily push notifications—such as commit messages, issue updates, or custom text—directly to your Telegram chats or channels, while keeping formatting like bold, italics, links, and code blocks consistent with Telegram’s requirements.
 icon: message-circle
 inputs:
   bot-token:
