--- a/action.yml
+++ b/action.yml
@@ -1,8 +1,5 @@
 name: Telegram sender markdownV2 specific
-description: |
-  This GitHub Action is a simple Telegram message sender.
-  You can write your message in GitHub Markdown format, and the Action will automatically convert it into Telegram-friendly MarkdownV2 before sending.
-  With this Action, you can easily push notifications—such as commit messages, issue updates, or custom text—directly to your Telegram chats or channels, while keeping formatting like bold, italics, links, and code blocks consistent with Telegram’s requirements.
+description: This GitHub Action is a simple Telegram message sender.You can write your message in GitHub Markdown format, and the Action will automatically convert it into Telegram-friendly MarkdownV2 before sending.
 icon: message-circle
 inputs:
   bot-token:
