--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,5 @@
 name: Telegram sender markdownV2 specific
-description: This GitHub Action is a simple Telegram message sender.You can write your message in GitHub Markdown format, and the Action will automatically convert it into Telegram-friendly MarkdownV2 before sending.
+description:  send telegram message in GitHub Markdown
 icon: message-circle
 inputs:
   bot-token:
